[tool.poetry]
name = "wf-classroom-video-store"
version = "1.0.2"
description = "video storage api"
authors = ["Paul J DeCoursey <paul@decoursey.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "classroom_video"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.25.0"
pymongo = {version = ">=3.12", extras = ["srv"]}
jsonpatch = ">=1.32"
wf-fastapi-auth0 = ">=1.0"
threadpoolctl = ">=3.1.0"
six = ">=1.15.0"
uvicorn = ">=0.18.3"
pytz = ">=2021.3"
aiofiles = ">=0.8.0"
python-multipart = ">=0.0.5"
click = "^8.1.3"
wf-honeycomb-io = "^2.1.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"
asyncache = "^0.3.1"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
black = "^23.1.0"
pylint = "^2.16.4"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.poetry.scripts]
cleanup = 'classroom_video.console:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
